[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Discover other instances of your application on the local network."
documentation = "http://maidsafe.net/service_discovery/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "service_discovery"
readme = "README.md"
repository = "https://github.com/maidsafe/service_discovery"
version = "0.0.1"

[dependencies]
ip = "~1.1.0"
maidsafe_utilities = "~0.1.5"
mio = "~0.5.0"
net2 = "~0.2.21"
rand = "~0.3.13"
rustc-serialize = "~0.3.16"
