[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Discover other instances of your application on the local network."
documentation = "http://maidsafe.net/service_discovery/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "service_discovery"
readme = "README.md"
repository = "https://github.com/maidsafe/service_discovery"
version = "0.2.1"

[dependencies]
bytes = "~0.3.0"
clippy = {version = "~0.0.44", optional = true}
ip = "~1.1.0"
libc = "0.2.7"
log = "~0.3.5"
maidsafe_utilities = "~0.3.0"
mio = "~0.5.0"
net2 = "~0.2.22"
rand = "~0.3.14"
rustc-serialize = "~0.3.18"
void = "~1.0.1"
